Reusing code in entrypoints