@@ -10,9 +10,30 @@ else
 fi
 }
 
+test_fn() {
+  vars=$1
+  cmd=($vars)
+  ${cmd[@]}
+}
+
+#source ./helpers.sh
+
 input="postgres://rvwxqhvtvwgqmv:0c43a8597dd04d7efe966ffc64a0892d787e07d4151242109c2c204afb701772@ec2-107-21-109-15.compute-1.amazonaws.com:5432/d4fq7bp9lrok90"
-parse_hostname $input
-echo "hostname: $hostname"
+#parse_hostname $input
+
+jparam="java --enable-preview -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -cp /app/resources:/app/classes:/app/libs/* org.bbelovic.techresourcetracker.TechResourceTrackerApplication"
+
+test_fn "$jparam"
+
+#cmd=(echo blabol blabol2 blabol3)
+
+#${cmd[@:2]}
+
+#vhostname2="unknown"
+#parse_input "blabol"
+
+#echo "hostname: $vhostname2"
+
 
 #strname="jdbc:postgresql://127.0.0.1:5432/notes_db"
 #if [[ $input =~ .*//(.+):5432.* ]]; then
